--- a/Old/meta.html
+++ b/Old/meta.html
@@ -21,8 +21,8 @@
 360用极速模式
 <!--http://se.360.cn/v6/help/meta.html-->
 颜色渐变
--webkit-gradient(linear, 0 0, 0 100%, from(#a4a4a4), to(#747474))
--moz-linear-gradient(top, #a4a4a4, #747474);
+background:-webkit-gradient(linear, 0 0, 0 100%, from(#a4a4a4), to(#747474))
+background:-moz-linear-gradient(top, #a4a4a4, #747474);
 
 <img class="BoonHeadImg" src='{{media url="wysiwyg/slides/vtb_1.jpg"}}' alt="" />
 <div class="BoonWord">
